# demo-stablecoin

./: .gitignore  README.md
.devcontainer/: Dockerfile
doc-assets/diagrams/: burn_stablecoin.drawio  deploy_oracle.drawio  deploy_reserve_validator_&_minting_policy.drawio  mint_stablecoin.drawio  toggle_oracle.drawio  update_oracle.drawio
src/on-chain/: cabal.project
src/on-chain/assets/: nft.plutus
src/on-chain/scripts/: DemoStablecoin.cabal  NFTPolicy.hs  OracleValidator.hs  ReserveValidator.hs  StablecoinPolicy.hs  TokenMintingPolicy.hs
