cabal-version:      3.4
name:               Demo-Stablecoin
version:            0.1.0.0
author:             Eyob and Tollan
maintainer:         github.com/EyobAshenaki ,
                    github.com/TollanBerhanu
license:            Apache-2.0
build-type:         Simple

common common-all
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , utilities
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors

common common-all-tests
    import:           common-all
    build-depends:    QuickCheck
                    , tasty

library
    import:             common-all
    exposed-modules:    NFTPolicy
						